# catalyst_center_iac_mcpserver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MCP_RELEASE_READINESS_REVIEW.md  README.md  SCHEMA_DRIVEN_ARCHITECTURE.md  TOOLS.md  catalyst_center_clusters.yaml  cluster_registry.py  compose.yaml  models.py  pyproject.toml  redis_store.py  runner_engine.py  server.py  settings.py  tool_catalog.yaml  tool_registry.py  transformers.py
catalyst_center_iac_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: README.md
config/schemas/: tool_catalog.schema.yaml
deploy/env/: catalyst-center-iac-mcp.env.example
deploy/nginx/: catalyst-center-iac-mcp-docker.conf  catalyst-center-iac-mcp.conf
deploy/systemd/: catalyst-center-iac-mcp.service
examples/: HTTPS_SETUP.md  README.md  discovery_example.py  fabric_workflow_example.py  network_settings_example.py  provision_site_example.py  version_fallback_example.py
scripts/: build_mcp_training_presentation.py  manage_tool_catalog.py
tests/: test_cluster_registry.py  test_new_transformers.py  test_runner_engine.py  test_server_contract.py  test_tool_registry.py  test_transformers.py
