[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-center-iac-mcp"
version = "0.1.0"
description = "Production-grade FastMCP server for Cisco Catalyst Center IaC workflow managers."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "ansible-core>=2.17.0,<2.19.0",
  "ansible-runner>=2.4.0,<3.0.0",
  "catalystcentersdk>=3.1.6.0.0",
  "fastapi>=0.135.0,<1.0.0",
  "fastmcp>=3.2.0,<4.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "redis>=6.0.0,<8.0.0",
  "sse-starlette>=3.0.0,<4.0.0",
  "uvicorn[standard]>=0.43.0,<1.0.0",
]

[project.scripts]
catalyst-center-iac-mcp = "server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.setuptools]
py-modules = [
  "server",
  "runner_engine",
  "transformers",
  "redis_store",
  "settings",
  "models",
  "cluster_registry",
  "tool_registry",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
